# atmosphtransmemullsst

./: .copier-answers.yml  CHANGELOG.rst  README.md  pyproject.toml
atmosphtransmemullsst/: simpleatmospherictransparencyemulator.py
benchmarks/: asv.conf.json
docs/: conf.py
docs/notebooks/: intro_notebook.ipynb
docs/notebooks/atmemulator/: test_AtmEmulator.ipynb
docs/notebooks/atmpressemulator/: compare_AtmPressEmulator.ipynb  test_AtmPressEmulator.ipynb
docs/notebooks/simpleemulator/: check_SimplEmul_datasetgrids.ipynb  test_SimplEmul_MultiSitesAbsO2Pattern.ipynb  test_SimplEmul_MultiSitesScattPattern.ipynb  test_SimpleAtmEmulator.ipynb
notebooks/: TestSimpleAtmosphericEmulator.ipynb
src/simpleemulator/: simpleatmemulator.py
